// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField should render correctly 1`] = `
<DocumentFragment>
  .cache-4zx8kl {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
  width: 100%;
}

.cache-4zx8kl .eqr7bqq3 {
  cursor: pointer;
}

.cache-4zx8kl[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-m3g6o6 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-m3g6o6:not(:disabled) {
  cursor: pointer;
}

.cache-m3g6o6:disabled {
  cursor: not-allowed;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-m3g6o6:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-m3g6o6:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-55x4xn {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-55x4xn path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-16eol3o {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-15098z8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-cnr3aj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form>
    <div
      aria-disabled="false"
      class="cache-4zx8kl eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="cache-m3g6o6 eqr7bqq2"
        id="test"
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-55x4xn eqr7bqq4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16eol3o eqr7bqq6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-15098z8 ehpbis70"
        flex="1"
      >
        <div
          class="cache-cnr3aj ehpbis70"
          flex="1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly checked without value 1`] = `
<DocumentFragment>
  .cache-4zx8kl {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
  width: 100%;
}

.cache-4zx8kl .eqr7bqq3 {
  cursor: pointer;
}

.cache-4zx8kl[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-m3g6o6 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-m3g6o6:not(:disabled) {
  cursor: pointer;
}

.cache-m3g6o6:disabled {
  cursor: not-allowed;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-m3g6o6:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-m3g6o6:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-55x4xn {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-55x4xn path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-16eol3o {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-15098z8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-cnr3aj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form>
    <div
      aria-disabled="false"
      class="cache-4zx8kl eqr7bqq1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="cache-m3g6o6 eqr7bqq2"
        id="checked"
        name="checked"
        type="checkbox"
        value="true"
      />
      <svg
        class="cache-55x4xn eqr7bqq4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16eol3o eqr7bqq6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-15098z8 ehpbis70"
        flex="1"
      >
        <div
          class="cache-cnr3aj ehpbis70"
          flex="1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-4zx8kl {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
  width: 100%;
}

.cache-4zx8kl .eqr7bqq3 {
  cursor: pointer;
}

.cache-4zx8kl[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-m3g6o6 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-m3g6o6:not(:disabled) {
  cursor: pointer;
}

.cache-m3g6o6:disabled {
  cursor: not-allowed;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-m3g6o6:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-m3g6o6:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-55x4xn {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-55x4xn path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-16eol3o {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-15098z8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-cnr3aj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form>
    <div
      aria-disabled="true"
      class="cache-4zx8kl eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="cache-m3g6o6 eqr7bqq2"
        disabled=""
        id="test"
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-55x4xn eqr7bqq4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16eol3o eqr7bqq6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-15098z8 ehpbis70"
        flex="1"
      >
        <div
          class="cache-cnr3aj ehpbis70"
          flex="1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly with a value 1`] = `
<DocumentFragment>
  .cache-4zx8kl {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
  width: 100%;
}

.cache-4zx8kl .eqr7bqq3 {
  cursor: pointer;
}

.cache-4zx8kl[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-m3g6o6 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-m3g6o6:not(:disabled) {
  cursor: pointer;
}

.cache-m3g6o6:disabled {
  cursor: not-allowed;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-m3g6o6:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-m3g6o6:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-55x4xn {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-55x4xn path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-16eol3o {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-15098z8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-cnr3aj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-4zx8kl eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="cache-m3g6o6 eqr7bqq2"
        id="value"
        name="value"
        type="checkbox"
        value="foo"
      />
      <svg
        class="cache-55x4xn eqr7bqq4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16eol3o eqr7bqq6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-15098z8 ehpbis70"
        flex="1"
      >
        <div
          class="cache-cnr3aj ehpbis70"
          flex="1"
        />
      </div>
    </div>
    <div
      aria-disabled="false"
      class="cache-4zx8kl eqr7bqq1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="cache-m3g6o6 eqr7bqq2"
        id="value"
        name="value"
        type="checkbox"
        value="bar"
      />
      <svg
        class="cache-55x4xn eqr7bqq4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16eol3o eqr7bqq6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-15098z8 ehpbis70"
        flex="1"
      >
        <div
          class="cache-cnr3aj ehpbis70"
          flex="1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-4zx8kl {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
  width: 100%;
}

.cache-4zx8kl .eqr7bqq3 {
  cursor: pointer;
}

.cache-4zx8kl[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-m3g6o6 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-m3g6o6:not(:disabled) {
  cursor: pointer;
}

.cache-m3g6o6:disabled {
  cursor: not-allowed;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-m3g6o6:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-m3g6o6:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-55x4xn {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-55x4xn path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-16eol3o {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-15098z8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-cnr3aj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1d3w5wq {
  width: 100%;
}

.cache-8ikytl-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-1ycfzva {
  color: #b3144d;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-top: 4px;
}

<form>
    <div
      aria-disabled="false"
      class="cache-4zx8kl eqr7bqq1"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-checked="false"
        aria-describedby="test-hint"
        aria-invalid="true"
        class="cache-m3g6o6 eqr7bqq2"
        id="test"
        name="test"
        required=""
        type="checkbox"
        value="false"
      />
      <svg
        class="cache-55x4xn eqr7bqq4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16eol3o eqr7bqq6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-15098z8 ehpbis70"
        flex="1"
      >
        <div
          class="cache-cnr3aj ehpbis70"
          flex="1"
        >
          <label
            class="cache-1d3w5wq eqr7bqq3"
            for="test"
          >
            Checkbox field error
          </label>
          <sup>
            <svg
              class="cache-8ikytl-sizeStyles e1gt4cfo0"
              viewBox="0 0 24 24"
            >
              <path
                d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
              />
            </svg>
          </sup>
        </div>
        <p
          class="eqr7bqq7 cache-1ycfzva e13y3mga0"
        >
          This field is required
        </p>
      </div>
    </div>
    <div>
      Focus
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-4zx8kl {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
  width: 100%;
}

.cache-4zx8kl .eqr7bqq3 {
  cursor: pointer;
}

.cache-4zx8kl[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-4zx8kl[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-4zx8kl .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-4zx8kl .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-4zx8kl:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-4zx8kl .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-m3g6o6 {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-m3g6o6:not(:disabled) {
  cursor: pointer;
}

.cache-m3g6o6:disabled {
  cursor: not-allowed;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-m3g6o6:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-m3g6o6:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-m3g6o6:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-m3g6o6:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-m3g6o6:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-m3g6o6[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-55x4xn {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-55x4xn path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-16eol3o {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-15098z8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-cnr3aj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1d3w5wq {
  width: 100%;
}

<form>
    <div
      aria-disabled="false"
      class="cache-4zx8kl eqr7bqq1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        class="cache-m3g6o6 eqr7bqq2"
        id="test"
        name="test"
        type="checkbox"
        value="true"
      />
      <svg
        class="cache-55x4xn eqr7bqq4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-16eol3o eqr7bqq6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-15098z8 ehpbis70"
        flex="1"
      >
        <div
          class="cache-cnr3aj ehpbis70"
          flex="1"
        >
          <label
            class="cache-1d3w5wq eqr7bqq3"
            for="test"
          >
            Checkbox field events
          </label>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
